# daylily-tapdb

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_DIRECTIVE.md  Dockerfile  Makefile  README.md  activate  commit-msg.txt  create+1-key.pem  create+1.pem  create-key.pem  create.pem  daylily_tapdb_env.yaml  environment.yml  localhost+2-key.pem  localhost+2.pem  pyproject.toml  replace_tapdb.py  tapdb_activate.sh  tapdb_deactivate.sh  tapdb_env.yaml
.github/workflows/: ci.yml  security-scans.yml  weekly-package.yml
admin/: __init__.py  auth.py  cognito.py  db_metrics.py  db_pool.py  domain_access.py  external_graph.py  main.py
admin/api/: __init__.py
admin/static/css/: style.css
admin/static/js/: graph.js
admin/templates/: admin_metrics.html  base.html  change_password.html  complex_query.html  create_instance.html  graph.html  help.html  index.html  info.html  instances_list.html  lineages_list.html  login.html  object_detail.html  signup.html  templates_list.html
config/: _metadata.json  metadata.json  tapdb-config-example.yaml
config/action/: core.json
config/actor/: actor.json
config/content/: nucleic-acid.json  specimen.json
config/generic/: generic.json
config/workflow/: assay.json
config/workflow_step/: queue.json
daylily_tapdb/: __init__.py  _version.py  admin_health.py  audit.py  connection.py  container_entry.py  euid.py  governance.py  lineage.py  passwords.py  schema_inventory.py  sequences.py  stats.py  timezone_utils.py  ursa_repository.py  user_store.py
daylily_tapdb/actions/: __init__.py  dispatcher.py
daylily_tapdb/aurora/: __init__.py  cfn_template.py  config.py  connection.py  schema_deployer.py  stack_manager.py
daylily_tapdb/aurora/templates/: aurora-postgres.json
daylily_tapdb/cli/: __init__.py  __main__.py  _registry_v2.py  admin_server.py  aurora.py  cognito.py  context.py  db.py  db_config.py  output.py  pg.py  spec.py  user.py  validation.py
daylily_tapdb/core_config/: _metadata.json
daylily_tapdb/core_config/actor/: actor.json
daylily_tapdb/core_config/generic/: generic.json
daylily_tapdb/core_config/governance/: governance.json
daylily_tapdb/core_config/system/: external_reference.json  system.json
daylily_tapdb/etc/: domain_code_registry.json  prefix_ownership_registry.json
daylily_tapdb/factory/: __init__.py  instance.py
daylily_tapdb/graph_contracts/: __init__.py  lsmc_v0.py
daylily_tapdb/gui/: __init__.py  router.py
daylily_tapdb/gui/static/css/: tapdb-gui.css
daylily_tapdb/gui/static/js/: lsmc-ui.js  tapdb-json-editor.js
daylily_tapdb/gui/templates/: base.html  create.html  external_link.html  graph.html  meridian.html  metrics.html  object.html  readiness.html  search.html  template_editor.html  templates.html
daylily_tapdb/models/: __init__.py  audit.py  base.py  instance.py  lineage.py  outbox.py  template.py
daylily_tapdb/outbox/: __init__.py  contracts.py  inbox.py  queries.py  repository.py  worker.py
daylily_tapdb/services/: __init__.py  external_refs.py  graph_payloads.py  object_lookup.py  object_search.py
daylily_tapdb/templates/: __init__.py  loader.py  manager.py  mutation.py  requirements.py
daylily_tapdb/templates/schema/: template-pack.schema.json
daylily_tapdb/validation/: __init__.py  governance.py  instantiation_layouts.py
daylily_tapdb/web/: __init__.py  bridge.py  dag.py  factory.py  runtime.py
docs/: README.md  architecture.md  dag_spec.md  identity-and-scoping.md  integration-and-embedding.md  lsmc_tapdb_breaking_changes.md  lsmc_tapdb_execplan.md  repository-review.md  runtime-and-cli.md  tapdb_0600_refactor_overview_what_was_done.md  tapdb_gui_inclusion.md  tapdb_meridian_041_refactor.md  template-authoring.md
docs/architecture/: evidence_vs_governance.md
docs/old_docs/: identity-and-scoping.md  repository-review.md
docs/plans/: 20260604T044652Z_tapdb_embeddable_gui_v1_ledger.md  20260610T113310Z_tapdb_gui_json_editor_playwright_ledger.md  20260612T154200Z_tapdb_evidence_governance_ledger.md
docs/specs_and_plans/: tapdb_core_refactor_spec_for_codex.md
examples/readme/: 00_smoke.sh  10_bootstrap_local.sh  20_python_api.py
schema/: rls.sql  tapdb_schema.sql
schema/migrations/: 20260303_120000_add_tenant_id.sql  20260303_120010_add_outbox_event.sql  20260405_120000_add_domain_scoping.sql  20260612_154200_add_template_validator_ref.sql  20260612_154210_instance_prefix_from_template.sql
schema/migrations_legacy/: 001_rename_type_hierarchy_fields.sql
tests/: __init__.py  conftest.py  test_action_dispatcher_unit.py  test_activation_metadata.py  test_admin_accessibility_tokens.py  test_admin_auth_decorators.py  test_admin_auth_shared.py  test_admin_cognito.py  test_admin_db_connection.py  test_admin_db_metrics.py  test_admin_domain_access.py  test_admin_graph_styles.py  test_admin_instance_creation.py  test_admin_main_coverage.py  test_admin_routes_smoke.py  test_admin_support_coverage.py  test_audit_stats_coverage.py  test_aurora_cfn_template.py  test_aurora_cli.py  test_aurora_config.py  test_aurora_connection.py  test_aurora_schema_deployer.py  test_aurora_stack_manager.py  test_cli.py  test_cli_cognito_floor_lift.py  test_cli_coverage.py  test_cli_db_floor_lift.py  test_cli_floor_lift_part1.py  test_cli_helper_units.py  test_cli_registry_v2.py  test_cli_root_floor_lift.py  test_connection_unit.py  test_container_runtime.py  test_coverage_boost.py  test_db_safety.py  test_docs_contracts.py  test_docs_examples.py  test_domain_scoping.py  test_euid.py  test_explicit_context.py  (+37 more)
tools/db_loadtest/: README.md  generate_synthetic_data.py
tools/db_loadtest/pgbench/: insert_instance.sql  insert_lineage_edge.sql  list_latest_revisions.sql  read_graph_recursive.sql  run_app_shaped.sh
