[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daylily-tapdb"
dynamic = ["version"]
description = "Templated Abstract Polymorphic Database - A flexible object model library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Daylily Informatics", email = "info@daylilyinformatics.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
keywords = ["database", "orm", "polymorphic", "templates", "sqlalchemy", "lims"]

dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic",
    "typer",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "httpx",
    "pre-commit>=3.0",
    "bandit>=1.7",
    "detect-secrets>=1.4",
]

# Optional CLI add-ons.
#
# Note: The CLI itself (Typer + Rich) is intentionally part of core deps so
# `tapdb --help` works after `pip install -e .` per REFACTOR_TAPDB.md Phase 0.
cli = [
    "pyyaml",
]

# Optional Aurora (AWS RDS Aurora) support.
aurora = [
    "boto3>=1.34",
    "botocore",
]

# Optional Admin UI (FastAPI). Keep out of core installs.
admin = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "itsdangerous",
    "daylily-cognito[auth]>=0.1.26",
    # passlib 1.7.x is not compatible with bcrypt>=4 (bcrypt enforces 72-byte
    # password max and passlib's backend self-test uses a longer sentinel).
    # Pin to bcrypt<4 to keep admin auth usable.
    "passlib[bcrypt]",
    "bcrypt<4",
]

[project.scripts]
tapdb = "daylily_tapdb.cli:main"

[project.urls]
Homepage = "https://github.com/Daylily-Informatics/daylily-tapdb"
Repository = "https://github.com/Daylily-Informatics/daylily-tapdb.git"
Documentation = "https://daylily-tapdb.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["daylily_tapdb*", "admin*"]

[tool.setuptools.package-data]
daylily_tapdb = [
    "core_config/_metadata.json",
    "core_config/*/*.json",
]
# Admin UI ships HTML templates + static assets.
admin = [
    "templates/*.html",
    "static/css/*.css",
    "static/js/*.js",
]

[tool.setuptools.data-files]
"schema" = ["schema/tapdb_schema.sql", "schema/rls.sql"]
"schema/migrations" = ["schema/migrations/*.sql"]
"schema/migrations_legacy" = ["schema/migrations_legacy/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"daylily_tapdb/models/*.py" = ["N801"]
"admin/db_pool.py" = ["N806"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
targets = ["daylily_tapdb", "admin"]
exclude_dirs = ["tests", "dist", "build"]
skips = [
    "B101",  # assert used in tests and defensive validation paths
    "B105",  # hardcoded_password_string false positives on field names/defaults
    "B110",  # intentional best-effort cleanup/logging paths
    "B112",  # intentional defensive continue patterns if added later
    "B311",  # non-cryptographic randomness if added later
    "B404",  # CLI/admin intentionally use subprocess for trusted tools
    "B603",  # subprocess calls execute trusted local commands
    "B607",  # subprocess calls rely on known PATH tools (git, psql, lsof, etc.)
    "B608",  # SQL fragments are operator-authored/static, not raw user interpolation
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
git_describe_command = "git describe --dirty --tags --long --match [0-9]*"
write_to = "daylily_tapdb/_version.py"
write_to_template = "__version__ = \"{version}\"\n"
